--- a/spring-new-user-form/build.gradle
+++ b/spring-new-user-form/build.gradle
@@ -28,7 +28,9 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.0'}
+	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.0'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+}
 
 tasks.named('test') {
 	useJUnitPlatform()
