--- a/spring-new-user-form/src/main/resources/application.properties
+++ b/spring-new-user-form/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost/spring10
 spring.datasource.username=root
-spring.datasource.password=199eMzju
+spring.datasource.password=Xgg8zwbz
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
